k8s_apigwy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: springboot
  name: deployment3-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app3-springboot
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app3-springboot
    spec:
      containers:
      - image: shivaramani/springboot
        imagePullPolicy: Always
        name: app3-springboot
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: springboot
  name: deployment4-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app4-springboot
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app4-springboot
    spec:
      containers:
      - image: shivaramani/springboot
        imagePullPolicy: Always
        name: app4-springboot
        ports:
        - containerPort: 8080        
---
apiVersion: v1
kind: Service
metadata:
  namespace: springboot
  name: service3-springboot
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app3-springboot
---
apiVersion: v1
kind: Service
metadata:
  namespace: springboot
  name: service4-springboot
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app4-springboot    
---
apiVersion: v1
kind: Service
metadata:
  namespace: springboot
  name: ingress-springboot-internal
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: app3-springboot
